[gd_scene load_steps=3 format=3 uid="uid://d1pncg6ca7tyn"]

[ext_resource type="Script" path="res://Scripts/wave_manager.gd" id="1_xolop"]
[ext_resource type="AudioStream" uid="uid://cxefim747vhfo" path="res://Assets/Sounds/SFX/WaveComplete.wav" id="2_8t3ar"]

[node name="WaveManager" type="Node2D"]
script = ExtResource("1_xolop")
startingWaitTime = 3.0
minimumWaitTime = 0.8
decrementTimeBy = 0.2

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="PointOne" type="Node2D" parent="SpawnPoints"]
position = Vector2(33, 0)

[node name="PointTwo" type="Node2D" parent="SpawnPoints"]
position = Vector2(210, -166)

[node name="PointThree" type="Node2D" parent="SpawnPoints"]
position = Vector2(394, -3)

[node name="PointFour" type="Node2D" parent="SpawnPoints"]
position = Vector2(211, 155)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="WaveCompletedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8t3ar")
volume_db = 21.943
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
